--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "koa": "^2.4.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "request": "^2.83.0"
+  },
+  "devDependencies": {
+    "ws": "^4.1.0"
   }
 }
