--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "iconv-lite": "^0.4.19",
     "koa": "^2.4.1",
     "mysql": "^2.15.0",
     "request": "^2.83.0"
